Fri Dec 14 14:41:43 2001  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/plot2d.c (eval_plots): Yet another fix for linestyle
 	handling.  Plots with no "lt" or "lw" option at all would not get
 	their linewidth, pointsize and other options set up properly.

	* src/plot3d.c (eval_3dplots): Dito.

2001-12-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/plot2d.c (eval_plots): Re-do handling of possible
 	duplication of line/point style options. Fixes "plot 2 lt 2, 1 lt
 	1" which would plot both in linetype 1 introduced by Petr's "any
 	order of options" patches.  The line/point style options have to
 	be all together, now. And some codestyle fixes and reindentation.

	* src/plot3d.c (eval_3dplots): Dito.

	* src/misc.c (lp_parse): codestyle fixes.
	

2001-12-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (setup_tics): Went over automatic ticmark extension
 	of axis endpints.  Moved calculation of timelevel[axis] before the
 	tic extension.
	(round_outward): New function. Extracted and recombined code from
 	setup_tics, that handled ticmark extension. Extended to handle
 	time/date axes with their slightly irregular tic steps.
	(make_auto_time_minitics): Added cast to int to quell unsigned
 	comparison warning.

2001-12-04  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/fit.c: Fix buffer overflows regarding env vars used for
 	fitting.

2001-12-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/save.c (save_set_all): Put #ifdef PM3D around pm3d-only code
 	regions.

	* src/show.c (show_command): Dito.

2001-12-01  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/eval.c src/fit.c src/plot.c src/os2/gclient.c
	config/makefile.os2: Abandon EMX non-standard signal processing
	model. Also avoid calling PM-term functions if it's not running

2001-11-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c src/misc.c src/plot2d.c src/plot3d.c: Allow